refactored Code - GCP based